--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <body style="font-family: 'Montserrat', sans-serif;">
         <div id="msg" style="background-color:#000;color:#FFF;padding:10px;text-align:center;">Processing, please wait....</div>
         <div style="background-color:gray;color:#fff;position: fixed;top: 50%;left: 50%;z-index:2;width: 290px; box-sizing:border-box; margin-top:-143px;margin-left:-145px;text-align:center;font-size:12px;font-family:Montserrat, sans-serif; padding:10px 10px 10px 10px; border-radius:5px;">
-            <img src="{{ asset('images/tds-logo.png') }}" style="width:100px;border-radius:5px;">
+            <img src='images/tds-logo.png' style="width:100px;border-radius:5px;">
             <h2 style="font-size:16px; padding: 5px 0px; line-height:20px; font-weight:400;"><span style="font-weight:bold;text-decoration:none; font-size:20px; color:#fff; padding-bottom:10px; display:block; line-height:25px;">Get Breaking News Alerts From The Daily Star</span><span style="font-size:14px;line-height:100%;">We'll send you latest news updates through the day. You can manage them any time from your browser settings.</span> <br><br>Please click "Allow" to Get Started <br><br><span style="cursor:pointer;font-family: Arial;color: #ffffff;font-size: 16px;background: #5a52b7;padding: 5px 5px 5px 5px;text-decoration:underline;" onclick="location.href=document.referrer;return true;">No Thanks</span></h2>
         </div>
 
