--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ function __getcheckboxes() {
 function __alw() {
     document.getElementById('__emsg').innerHTML = '';
     tdsCloseThis(180);
-    setTimeout(function(){location.href = 'https://alerts.thedailystar.net/';},2);    
+    setTimeout(function(){location.href = 'https://mahmud13.github.io/browser-push/alerts.html';},2);    
     return false;
 }
 </script>
