--- a/index.html
+++ b/index.html
@@ -1,7 +1,75 @@
 <html>
 <body>
 <div id="___tdspushdiv"></div>
-<span id="___tdsspldiv"><style>.topnav2014 .comments{position:relative;}.popover {text-transform:none;font-size: 14px;font-style: normal;font-weight: 400;letter-spacing: normal;background-color: #f64646;border-radius: 6px;box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);max-width: 200px;padding: 1px;left:-90px;top: 40px;position: absolute;z-index: 100060;color:#FFF;width:200px;}.popover-content{cursor:pointer;padding: 10px;text-align:center;font-size: 12px;}.popover > .arrow, .popover > .arrow::after {border-color: transparent;border-style: solid;display: block;height: 0;position: absolute;width: 0;}.popover > .arrow {border-width: 11px;border-bottom-color: #CCC;border-top-width: 0;left: 50%;margin-left: -11px;top: -11px;}.popover > .arrow::after {border-width: 10px;border-bottom-color: #f64646;border-top-width: 0;content: " ";margin-left: -10px;top: 1px;}.fbmsginner{position:relative;padding:14px 5px 20px 0px;}</style><span class="fbmsginner"><a class="break_fbmsg" href="https://alerts.thedailystar.net/?settings=1" title="Breaking News Alerts"><b></b></a><div class="popover" style="display: none;" onclick="this.style.display='none';"><div class="arrow" style="left: 50%;"></div><div class="popover-content"><div style="color:#3410b3;text-align: right;padding-bottom: 5px;">Close [X]</div>You can manage your notification subscription by clicking above bell.</div></div></span></span>
+<span id="___tdsspldiv">
+    <style>.topnav2014 .comments{
+        position:relative;
+        }
+        .popover {
+            text-transform:none;
+            font-size: 14px;
+            font-style: normal;
+            font-weight: 400;
+            letter-spacing: normal;
+            background-color: #f64646;
+            border-radius: 6px;
+            box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+            max-width: 200px;
+            padding: 1px;
+            left:-90px;
+            top: 40px;
+            position: absolute;
+            z-index: 100060;
+            color:#FFF;
+            width:200px;
+        }
+        .popover-content{
+            cursor:pointer;
+            padding: 10px;
+            text-align:center;
+            font-size: 12px;
+        }
+        .popover > .arrow, .popover > .arrow::after {
+            border-color: transparent;
+            border-style: solid;
+            display: block;
+            height: 0;
+            position: absolute;
+            width: 0;
+        }
+        .popover > .arrow {
+            border-width: 11px;
+            border-bottom-color: #CCC;
+            border-top-width: 0;
+            left: 50%;
+            margin-left: -11px;
+            top: -11px;
+        }
+        .popover > .arrow::after {
+            border-width: 10px;
+            border-bottom-color: #f64646;
+            border-top-width: 0;
+            content: " ";
+            margin-left: -10px;
+            top: 1px;
+        }
+        .fbmsginner{
+            position:relative;
+            padding:14px 5px 20px 0px;
+        }
+    </style>
+    <span class="fbmsginner">
+        <a class="break_fbmsg" href="https://alerts.thedailystar.net/?settings=1" title="Breaking News Alerts"></a>
+        <div class="popover" style="display: none;" onclick="this.style.display='none';">
+            <div class="arrow" style="left: 50%;">
+            </div>
+            <div class="popover-content">
+                <div style="color:#3410b3;text-align: right;padding-bottom: 5px;">Close [X]</div>
+                You can manage your notification subscription by clicking above bell.
+            </div>
+        </div>
+    </span>
+</span>
 <script>
 function get_browser_info(){
     var ua=navigator.userAgent,tem,M=ua.match(/(opera|chrome|safari|firefox|msie|trident(?=\/))\/?\s*(\d+)/i) || [],d = 'desktop'; 
@@ -62,7 +130,7 @@ function __showSubscribePopup(){
     var id = document.getElementById('___tdspushdiv');
     if(id){
         id.innerHTML = '<style>.noti_bgstyle{width:100%;height:100%;position:fixed;left:0;top:0;z-index:15010000;background:rgba(0,0,0,.8);opacity:.95;filter:alpha(opacity=95)}.noti_wrap{z-index:2147483647;left:50%;top:0;position:fixed;width:400px;margin-left:-200px;box-sizing:border-box;padding:12px;background:#fff;font-family:Roboto,sans-serif;-moz-box-shadow:1px 1px 1px 0 #c9c9c9;-webkit-box-shadow:1px 1px 1px 0 #c9c9c9;box-shadow:1px 1px 1px 0 #c9c9c9;border:1px solid #e8e8e8}.notif_box{display:table;margin-top:10px}.noti_wrap .noti_img{width:65px;height:65px;float:left;margin:0 10px 0 0}.noti_wrap .noti_cont{display:table-cell;vertical-align:top}.noti_wrap .noti_cont h2{font-size:14px;margin:0;font-weight:600;line-height:18px}.noti_wrap .noti_cont .botinfo{font-size:12px;font-weight:400;padding:5px 0;line-height:18px;color:#666}.noti_wrap .noti_btnwrap{text-align:right;padding:10px 0 0;clear:both}.noti_btnwrap a.allow,.noti_btnwrap a.notnow{width:auto;padding:4px 15px;background:#fff;line-height:20px;border:1px solid #ccc;font-size:11px;color:#333;text-decoration:none;text-transform:uppercase;border-radius:3px;margin:0 0 0 10px}.noti_btnwrap a.notnow{border:none;border-radius:none;text-transform:none;text-decoration:underline;font-size:12px}.noti_btnwrap a.allow:hover{color:#fff;-moz-transition:background .3s ease-in;-o-transition:background .3s ease-in;-webkit-transition:background .3s ease-in;background:#4FACEF;border:1px solid #4B84AD}.noti_btnwrap a.active{background:#b40002;color:#fff;border:1px solid #b40002}.noti_wrap .teaminfo{font-size:12px}.noti_wrap h3{color:#184b80;margin-top: 10px; margin-bottom: 10px;}.noti_wrap h2 span,.noti_wrap h3 span{color:#4a9400}.noti_wrap li{padding-bottom:2px} .noti_wrap input[type="checkbox"]{margin:4px;}@media only screen and (max-device-width:480px){.noti_wrap{width:300px;margin-left:-150px}}</style>';
-        id.innerHTML +='<div id="__cricketsubscribe"><div class="noti_bgstyle"></div><div class="noti_wrap"> <div class="notif_box"> <div class="noti_cont"> <h2>Get <span>Breaking</span> News Alerts From The Daily Star.</h2> <div class="botinfo">We\'ll send you latest news updates through the day. You can manage them any time from your browser settings.</div></div></div><div class="noti_btnwrap"><span id="__emsg" style="color:red;font-size:12px;"></span><a class="notnow" onclick="tdsCloseThis(5);" href="javascript:void(0);">No Thanks</a> <a class="allow" onclick="__alw();" href="javascript:void(0);">&nbsp;&nbsp;&nbsp;&nbsp;Allow&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a> </div></div></div>';
+        id.innerHTML +='<div id="__subscribe"><div class="noti_bgstyle"></div><div class="noti_wrap"> <div class="notif_box"> <div class="noti_cont"> <h2>Get <span>Breaking</span> News Alerts From The Daily Star.</h2> <div class="botinfo">We\'ll send you latest news updates through the day. You can manage them any time from your browser settings.</div></div></div><div class="noti_btnwrap"><span id="__emsg" style="color:red;font-size:12px;"></span><a class="notnow" onclick="tdsCloseThis(5);" href="javascript:void(0);">No Thanks</a> <a class="allow" onclick="__alw();" href="javascript:void(0);">&nbsp;&nbsp;&nbsp;&nbsp;Allow&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a> </div></div></div>';
     }
 }
 
