--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ function __showSubscribePopup(){
 
 function tdsCloseThis(cday){
     setCookieVal(__cname,'yup',cday);
-    document.getElementById('__cricketsubscribe').style.display='none';
+    document.getElementById('__subscribe').style.display='none';
 }
 
 function tdsUnsubscribeButton(){
