--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ function setCookieVal(c_name,value,exdays)
     var exdate=new Date(current.getTime() + 86400000*exdays);
     var c_value=escape(value) + ((exdays==null) ? "" : "; expires="+exdate.toUTCString() + ';path=/;domain=.thedailystar.net');
     document.cookie=c_name + "=" + c_value;
-    console.log(document.cookie);
+    setTimeout(console.log(document.cookie), 200);
 }
 
 function getCookieVal(c_name)
