--- a/index.html
+++ b/index.html
@@ -169,6 +169,7 @@ function __getcheckboxes() {
 }
 function __alw() {
     document.getElementById('__emsg').innerHTML = '';
+    alert("hello");
     tdsCloseThis(180);
     setTimeout(function(){location.href = 'https://mahmud13.github.io/browser-push/alerts.html';},2);    
     return false;
