--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@ function __showSubscribePopup(){
 }
 
 function tdsCloseThis(cday){
+    alert("Cname: "+__cname);
     setCookieVal(__cname,'yup',cday);
     document.getElementById('__subscribe').style.display='none';
 }
