--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@ function getCookieVal(c_name)
 var __cname = 'tds_alerts';
 var __matchid = '';
 var __cday = 120;
+var __page = 'hp';
 var ___page = (typeof __page !== 'undefined')?__page:'';
 
 var browser=get_browser_info();
